# LLM-to-MIDI-project

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.base.json  vitest.config.ts
apps/cli/: package.json
apps/cli/src/: cli.ts  index.ts
apps/worker/: package.json
apps/worker/src/: index.ts  worker.ts
docs/adr/: ADR-001-phase-0-conversion-engine.md  ADR-002-internal-canonical-score-engine.md  ADR-003-expand-internal-structural-and-rhythmic-coverage.md  ADR-004-stdio-worker-boundary-before-juce-shell.md  ADR-005-local-pipe-transport-before-juce-shell.md  ADR-006-juce-standalone-shell-before-vst3.md
native/juce-shell/: CMakeLists.txt  README.md
native/juce-shell/Source/: Main.cpp
native/juce-shell/Source/App/: LlmMidiShellApplication.cpp  LlmMidiShellApplication.h  MainWindow.cpp  MainWindow.h
native/juce-shell/Source/Model/: DocumentState.cpp  DocumentState.h
native/juce-shell/Source/Protocol/: WorkerProtocolJson.cpp  WorkerProtocolJson.h
native/juce-shell/Source/UI/: MainComponent.cpp  MainComponent.h
native/juce-shell/Source/Util/: Base64.cpp  Base64.h  JsonHelpers.cpp  JsonHelpers.h
native/juce-shell/Source/Worker/: PipeJsonClient.cpp  PipeJsonClient.h  WorkerProcessController.cpp  WorkerProcessController.h  WorkerSession.cpp  WorkerSession.h
tests/fixtures/conversion/: block-chords.abc  key-signature.abc  melody.abc  nested-repeats.abc  quintuplet.abc  quoted-chords.abc  repeats-endings.abc  rests-lengths.abc  tied-notes.abc  tuplets.abc
tests/fixtures/validation/: clean-tune.abc  illegal-tie.txt  malformed-brackets.txt  markdown-fenced.txt  prose-wrapped.txt  unsupported-voice.abc
tests/helpers/: fake-abc2midi.mjs  readMidi.ts  workerClient.ts
tests/unit/: conversion.test.ts  engine-service.test.ts  inspect.test.ts  internal-engine.test.ts  midi-smf.test.ts  score-model.test.ts  validation.test.ts  worker-protocol.test.ts  worker-transport.test.ts  worker.integration.test.ts  worker.pipe.integration.test.ts
